Fix display issues from merge (#355)
* Fix display issues from merge

- Merge StaticInvestorNotice and InvestorNotice
- Fix header styles on earn homepage
- Fix copy on earn homepage
- Don't show verify address banner on earn homepage, only on tranched and senior pool pages
- Fix "Connect Metamask" text misalignment due to line height

* Somehow this stopped working too

--- a/client/src/layout/button.scss
+++ b/client/src/layout/button.scss
@@ -14,7 +14,6 @@ button {
   height: 56px;
   outline: none;
   background-color: $blue-xlight;
-  line-height: 56px;
 
   &:hover{
     background-color: $blue-light;
