--- a/client/src/layout/table-spaced.scss
+++ b/client/src/layout/table-spaced.scss
@@ -21,6 +21,7 @@
   }
 
   .table-row{
+    border-radius: inherit;
     align-items: center;
     display: flex;
     margin-bottom: 16px;
